product navigation issue on safari

--- a/assets/css/sass/base/layout/general.scss
+++ b/assets/css/sass/base/layout/general.scss
@@ -90,3 +90,12 @@
 		}
 	}
 }
+
+// For safari broswer
+.safari-detected {
+	.woostify-product-navigation {
+		.product-nav-item-content {
+			align-items: center;
+		}
+	}
+}
